fix: StatusStripe in light themes has low contrast
part of #7927

--- a/plugins/plugin-client-common/web/scss/components/StatusStripe/_mixins.scss
+++ b/plugins/plugin-client-common/web/scss/components/StatusStripe/_mixins.scss
@@ -22,6 +22,14 @@ $element-border: 1px solid var(--color-table-border2);
   }
 }
 
+@mixin StatusStripeWithDefaultColors {
+  @include StatusStripe {
+    &[data-type='default'] {
+      @content;
+    }
+  }
+}
+
 @mixin StatusStripeElement {
   .kui--status-stripe-element {
     @content;
